swagger config. new tests
